--- a/index.html
+++ b/index.html
@@ -418,7 +418,12 @@
         </div>
     </div>
 
-    <script src="app.js"></script>
+    <!-- Firebase SDK (Version 8 stable for direct HTML usage) -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
+
+    <!-- App Logic -->
+    <script src="app.js" defer></script>
 </body>
 
 </html>
