--- a/index.html
+++ b/index.html
@@ -99,6 +99,13 @@
                         <button id="changePasswordBtn" class="btn-secondary"
                             style="background: var(--primary); color: white;">🔐 Cambiar Contraseña</button>
                         <button id="todayBtnConfig" class="today-btn">Ir a Hoy</button>
+                        <div
+                            style="margin-top: 2rem; padding-top: 1rem; border-top: 1px solid var(--border); width: 100%;">
+                            <h3 style="font-size: 1rem; margin-bottom: 1rem; color: var(--danger);">Zona de Peligro</h3>
+                            <button id="resetDatabaseBtn" class="config-btn"
+                                style="background-color: #fee2e2; color: #dc2626; border: 1px solid #dc2626;">⚠️ Borrar
+                                Base de Datos</button>
+                        </div>
                     </div>
                 </div>
 
