--- a/index.html
+++ b/index.html
@@ -85,6 +85,23 @@
                             margin-left: 0;
                             width: 100%;
                             justify-content: center;
+                            font-size: 0.8rem;
+                            padding: 4px 10px;
+                            flex-wrap: wrap;
+                        }
+
+                        /* Ocultar descripción en móviles muy pequeños para ahorrar espacio */
+                        #weather-desc {
+                            display: none;
+                        }
+
+                        .logo-container {
+                            flex-direction: column;
+                            align-items: flex-start;
+                        }
+
+                        h1 {
+                            font-size: 1.4rem;
                         }
                     }
                 </style>
@@ -588,19 +605,24 @@
                     style="text-align: left; list-style: none; padding: 0; margin-bottom: 2rem; display: grid; grid-template-columns: 1fr 1fr; gap: 0.8rem;">
                     <li
                         style="background: rgba(99, 102, 241, 0.1); padding: 8px 12px; border-radius: 8px; font-size: 0.9rem; color: var(--text-main);">
-                        <span style="color: #e34c26;">🟠</span> HTML5</li>
+                        <span style="color: #e34c26;">🟠</span> HTML5
+                    </li>
                     <li
                         style="background: rgba(99, 102, 241, 0.1); padding: 8px 12px; border-radius: 8px; font-size: 0.9rem; color: var(--text-main);">
-                        <span style="color: #264de4;">🔵</span> CSS3 (Outfit)</li>
+                        <span style="color: #264de4;">🔵</span> CSS3 (Outfit)
+                    </li>
                     <li
                         style="background: rgba(99, 102, 241, 0.1); padding: 8px 12px; border-radius: 8px; font-size: 0.9rem; color: var(--text-main);">
-                        <span style="color: #f7df1e;">🟡</span> JavaScript ES6+</li>
+                        <span style="color: #f7df1e;">🟡</span> JavaScript ES6+
+                    </li>
                     <li
                         style="background: rgba(99, 102, 241, 0.1); padding: 8px 12px; border-radius: 8px; font-size: 0.9rem; color: var(--text-main);">
-                        <span style="color: #ffca28;">🔥</span> Firebase</li>
+                        <span style="color: #ffca28;">🔥</span> Firebase
+                    </li>
                     <li
                         style="background: rgba(99, 102, 241, 0.1); padding: 8px 12px; border-radius: 8px; font-size: 0.9rem; color: var(--text-main); grid-column: span 2;">
-                        <span style="color: #6366f1;">☀️</span> Open-Meteo API</li>
+                        <span style="color: #6366f1;">☀️</span> Open-Meteo API
+                    </li>
                 </ul>
 
                 <a href="https://github.com/ibrahimdude-88/horariosapp/" target="_blank" class="btn-primary"
