--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                             </svg>
                         </button>
                     </div>
-                    <div style="display: flex; gap: 1rem; flex-wrap: wrap;">
+                    <div class="config-actions">
                         <button id="manageAssignmentsBtn" class="btn-secondary">Gestionar Asignaciones</button>
                         <button id="manageEmployeesBtn" class="btn-secondary">👥 Gestionar Empleados</button>
                         <button id="manageVacationsBtn" class="btn-secondary">Gestionar Vacaciones</button>
